--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,6 +1,9 @@
 <% layout("/layouts/boilerplate") %>
 
+
   <body>
+    <%= success %>
+    <%= error %>
     <h3>All Listings</h3>
     <!-- <form action="/listings/new" method="get">
       <button>Create new Listings</button>
@@ -8,7 +11,7 @@
     <div class=" row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
 
       <% for (let listing of alllistings){ %>
-        <div class="card col listing-card" style="width: 20rem;">
+        <div class="card col listing-card" style="width: 21.7rem;">
 
           <a href="/listings/<%= listing._id %>" class="listing-link">
             <img src="<%= listing.image.url %>" class="card-img-top " alt="listing_image" style="height: 20rem;">
@@ -20,7 +23,7 @@
                   <%= listing.title %>
                 </b>
                 <br>&#8377;<%= listing.price%>/ night <br>
-                  <!-- //.toLocaleString("en-IN") -->
+                
               </p>
             </div>
           </a>
@@ -32,12 +35,4 @@
 
   </body>
 
-
-  <!-- this is the format first we used to learn by simple thing -->
-  <!-- <ul>
-    <% for (let listing of alllistings){ %>
-      <li><a href="/listings/<%= listing._id %>">
-          <%= listing.title %>
-        </a></li>
-      <% } %>
-  </ul> -->
+  <!-- //.toLocaleString("en-IN") -->
